2010-07-21  Marek Habersack  <mhabersack@novell.com>

	* Wizard.cs: made rendering 100% compliant with .NET (button IDs,
	2.0+)
	Implemented LayoutTemplate (4.0+)

	* LinkButton.cs: render id first

	* CreateUserWizard.cs: CreateUserNavigationContainer.UpdateState
	doesn't add a previous button if we're on the first step.

2010-07-20  Marek Habersack  <mhabersack@novell.com>

	* StyleCollection.cs: added

2010-07-19  Marek Habersack  <mhabersack@novell.com>

	* SqlDataSourceView.cs: added the RaiseUnsupportedCapabilityError
	method (2.0+)

	* RoleGroupCollection.cs: added OnValidate (undocumented) overload

	* ParameterCollection.cs: added missing Add method overload (2.0+)

	* LiteralControlBuilder.cs: added the AppendLiteralString method
	override (2.0+)

	* DataKey.cs: implemented IEquatable interface methods (4.0)

	* XmlDataSource.cs: implemented CacheKeyContext property (4.0)

2010-07-16  Marek Habersack  <mhabersack@novell.com>

	* Login.cs, PasswordRecovery.cs: implemented RenderOuterTable
	(4.0)

	* FormViewRow.cs: added internal property RenderJustCellContents
	which makes the control render only its children (4.0)

	* FormView.cs: implemented RenderOuterTable property and the
	ModifiedOuterTableStylePropertyName method (4.0)

2010-07-15  Marek Habersack  <mhabersack@novell.com>

	* WebControl.cs: implemented verifying that no inline style
	property is set for controls which support the RenderOuterTable
	property (4.0)

	* IRenderOuterTable.cs: internal helper interface for controls
	which support the RenderOuterTable property (for now only
	ChangePassword, 3 more to come)

	* ChangePassword.cs: implemented RenderOuterTable property and the
	corresponding behavior of not rendering surrounding table when the
	property is set to false (4.0).
	Modified BaseChangePasswordContainer to not inherit from Table
	anymore. Table is an instance variable (always used as the
	template container in 2.0) which is optionally (and by default)